tests/errors/raw_ptr/cannot_move_non_move_type_through_raw_ptr.err.expected
error: at 8:13: [SUB-CopyOfNonCopy] In function 'f', block 'entry': cannot copy non-Copy type Linear
   |
 8 |             q = copy p.*;
   |             ^^^^^^^^^^^^
  hint: since the type is not Copy, try moving it instead using 'move'
